--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@
             <div class="concept">
                 <h3>¿Qué es Cloud Computing?</h3>
                 <p>Cloud Computing es la entrega de servicios de computación a través de Internet, incluyendo servidores, almacenamiento, bases de datos, redes, software, análisis e inteligencia. Ofrece innovación más rápida, recursos flexibles y economías de escala.</p>
+                <div class="image-container">
+                    <img src="images/cloud.webp" alt="Cloud Computing">
+                </div>
             </div>
 
             <div class="concept">
@@ -127,16 +130,25 @@
                 <p><strong>SaaS (Software as a Service):</strong> Software distribuido por Internet bajo suscripción. Ejemplo: Google Workspace, Microsoft 365.</p>
                 <p><strong>PaaS (Platform as a Service):</strong> Plataforma para desarrollar y ejecutar aplicaciones sin gestionar la infraestructura. Ejemplo: Google App Engine, Heroku.</p>
                 <p><strong>IaaS (Infrastructure as a Service):</strong> Infraestructura informática fundamental bajo demanda. Ejemplo: AWS EC2, Google Compute Engine.</p>
+                <div class="image-container">
+                    <img src="images/saas.webp" alt="SaaS PaaS IaaS">
+                </div>
             </div>
 
             <div class="concept">
                 <h3>¿Qué es Virtualización?</h3>
                 <p>La virtualización es la tecnología que permite crear versiones virtuales de recursos físicos como servidores, almacenamiento y redes. Permite ejecutar múltiples sistemas operativos y aplicaciones en una misma máquina física.</p>
+                <div class="image-container">
+                    <img src="images/virtualizacion.webp" alt="Virtualización">
+                </div>
             </div>
 
             <div class="concept">
                 <h3>¿Qué es Docker?</h3>
                 <p>Docker es una plataforma de código abierto que automatiza el despliegue de aplicaciones dentro de contenedores de software. Los contenedores permiten empaquetar una aplicación con todas sus dependencias y ejecutarla en cualquier entorno.</p>
+                <div class="image-container">
+                    <img src="images/docker.webp" alt="Docker">
+                </div>
             </div>
         </div>
 
